add links and fix grid

--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
     <div class="center">
       <h1 class="big-leader">Swipe.js Templates</h1>
       <p>A collection of templates that can be used as a starting point for any slider that uses the <a href="https://github.com/thebird/Swipe" title="Swipe.js Homepage" target="_blank">swipe.js slider</a>.</p>
+      <a href="https://github.com/james2doyle/swipe-templates" title="Github Repo">Github Repo</a>
     </div>
     <div class="grid">
-      <div class="col-1-3">
+      <div class="col-1-5">
         <div class="center">
           <h2>Default</h2>
         </div>
@@ -28,7 +29,7 @@
           <a href="templates/default.html">Demo</a>
         </div>
       </div>
-      <div class="col-1-3">
+      <div class="col-1-5">
         <div class="center">
           <h2>Pagination</h2>
         </div>
@@ -37,7 +38,7 @@
           <a href="templates/pagination.html">Demo</a>
         </div>
       </div>
-      <div class="col-1-3">
+      <div class="col-1-5">
         <div class="center">
           <h2>Thumbnails</h2>
         </div>
@@ -46,7 +47,7 @@
           <a href="templates/thumbnails.html">Demo</a>
         </div>
       </div>
-      <div class="col-1-3">
+      <div class="col-1-5">
         <div class="center">
           <h2>3-Up</h2>
         </div>
@@ -55,7 +56,7 @@
           <a href="templates/3-up.html">Demo</a>
         </div>
       </div>
-      <div class="col-1-3">
+      <div class="col-1-5">
         <div class="center">
           <h2>Wrapped with links</h2>
         </div>
